--- a/main.html
+++ b/main.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <body>
+	   <form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" placeholder="Enter your name"><br><br>
+    
+    <label for="year">Year:</label>
+    <input type="number" id="year" name="year" placeholder="Enter the year"><br><br>
+    
+    <input type="button" id="button" value="Submit" onclick="updateURL()"><br><br>
+  </form>
+  
+  <h3 id="url">https://localhost:8080/</h3>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
