--- a/main.html
+++ b/main.html
@@ -2,10 +2,10 @@
 <html>
   <body>
 	   <form>
-    <label for="name">Name:</label>
+    <label for="name">Name:</label><br>
     <input type="text" id="name" name="name" placeholder="Enter your name"><br><br>
     
-    <label for="year">Year:</label>
+    <label for="year">Graduation Year:</label><br>
     <input type="number" id="year" name="year" placeholder="Enter the year"><br><br>
     
     <input type="button" id="button" value="Submit" onclick="updateURL()"><br><br>
